Update dh-helpdesk-web.yml for Azure Pipelines

--- a/dh-helpdesk-web.yml
+++ b/dh-helpdesk-web.yml
@@ -103,12 +103,14 @@ steps:
     TargetFolder: '$(Build.ArtifactStagingDirectory)/DH-Helpdesk-WebApi'
 
 - task: CopyFiles@2
+  displayName: Copy DH-Helpdesk-Database
   inputs:
     SourceFolder: '$(Build.SourcesDirectory)/Database/SQLScripts'
     Contents: '**'
     TargetFolder: '$(Build.ArtifactStagingDirectory)\DH-Helpdesk-Database'
 
 - task: PublishPipelineArtifact@1
+  displayName: Publish Artifact DH-Helpdesk-Web
   inputs:
     targetPath: '$(Build.ArtifactStagingDirectory)/DH-Helpdesk-Web'
     artifactName: 'DH-Helpdesk-Web'
@@ -120,10 +122,12 @@ steps:
     artifactName: 'DH-Helpdesk-Database'
 
 - task: PublishPipelineArtifact@1
+  displayName: Publish Artifact DH-Helpdesk-Selfservice
   inputs:
     targetPath: '$(Build.ArtifactStagingDirectory)/DH-Helpdesk-Selfservice'
     artifactName: 'DH-Helpdesk-Selfservice'
 - task: PublishPipelineArtifact@1
+  displayName: Publish Artifact DH-Helpdesk-WebApi
   inputs:
     targetPath: '$(Build.ArtifactStagingDirectory)/DH-Helpdesk-WebApi'
     artifactName: 'DH-Helpdesk-WebApi'
