Update dh-helpdesk-extendedcase-api-dev.yml for Azure Pipelines

--- a/dh-helpdesk-extendedcase-api-dev.yml
+++ b/dh-helpdesk-extendedcase-api-dev.yml
@@ -10,7 +10,7 @@ pool:
   vmImage: 'windows-latest'
 
 variables:
-  solution: '**/*.sln'
+  solution: '**/DH_Helpdesk/ExtendedCase/ExtendedCase.Api.sln'
   buildPlatform: 'Any CPU'
   buildConfiguration: 'Release'
 
