--- a/dh-helpdesk-extendedcase-webcomponents-dev.yml
+++ b/dh-helpdesk-extendedcase-webcomponents-dev.yml
@@ -5,18 +5,31 @@
 
 trigger:
 - Development
-
 pool:
-  vmImage: ubuntu-latest
-
+  vmImage: 'windows-latest'
 steps:
 - task: NodeTool@0
   inputs:
-    versionSpec: '10.x'
-  displayName: 'Install Node.js'
-
+    versionSpec: '10.18.1'
 - script: |
-    npm install -g @angular/cli
+    npm install -g @angular/cli@8.3.29
+  workingDirectory: '$(System.DefaultWorkingDirectory)/ExtendedCase/ExtendedCase.WebComponent'
+  displayName: 'npm install cli'
+- script: 
     npm install
-    ng build --prod
-  displayName: 'npm install and build'
+  workingDirectory: '$(System.DefaultWorkingDirectory)/ExtendedCase/ExtendedCase.WebComponent'
+  displayName: 'npm install'
+- script: 
+    npm run build-test --verbose
+  workingDirectory: '$(System.DefaultWorkingDirectory)/ExtendedCase/ExtendedCase.WebComponent'
+  displayName: 'ng build prod'
+
+- task: CopyFiles@2
+  displayName: 'Copy Files'
+  inputs:
+    Contents: '$(System.DefaultWorkingDirectory)/ExtendedCase/ExtendedCase.WebComponent/**' 
+    TargetFolder: '$(Build.ArtifactStagingDirectory)'
+- task: PublishBuildArtifacts@1
+  inputs:
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)/ExtendedCase/ExtendedCase.WebComponent'
+    ArtifactName: 'Helpdesk_ExtendedCase_WebComponent'
