--- a/dh-helpdesk-extendedcase-web-development.yml
+++ b/dh-helpdesk-extendedcase-web-development.yml
@@ -15,21 +15,28 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
-- task: NuGetToolInstaller@1
+# - task: NuGetToolInstaller@1
 
-- task: NuGetCommand@2
-  inputs:
-    restoreSolution: '$(solution)'
+# - task: NuGetCommand@2
+#   inputs:
+#     restoreSolution: '$(solution)'
 
-- task: MSBuild@1
-  displayName: Build DH.Helpdesk.ExtendedCase.Web
+# - task: MSBuild@1
+#   displayName: Build DH.Helpdesk.ExtendedCase.Web
+#   inputs:
+#     solution: '**/ExtendedCase/ExtendedCase.Web.sln'
+#     msbuildVersion: '17.0'  
+#     msbuildArguments: '/p:TargetFrameworkVersion=v4.7.2 /p:SkipInvalidConfigurations=true /p:OutDir="$(Build.ArtifactStagingDirectory)"'
+
+- task: CopyFiles@2
+  displayName: Copy DH-Helpdesk-ExtendedCase-Web
   inputs:
-    solution: '**/ExtendedCase/ExtendedCase.Web.sln'
-    msbuildVersion: '17.0'  
-    msbuildArguments: '/p:TargetFrameworkVersion=v4.7.2 /p:SkipInvalidConfigurations=true /p:OutDir="$(Build.ArtifactStagingDirectory)"'
+    SourceFolder: '$(Build.ArtifactStagingDirectory)/ExtendedCase.Web/src/**'
+    Contents: '**'
+    TargetFolder: '$(Build.ArtifactStagingDirectory)/ExtendedCase.Web'
   
 - task: PublishPipelineArtifact@1
   displayName: Publish Artifact DH-Helpdesk-ExtendedCase-WebApi
   inputs:
-   targetPath: '$(Build.ArtifactStagingDirectory)/_PublishedWebsites/ExtendedCase.Web'
+   targetPath: '$(Build.ArtifactStagingDirectory)/ExtendedCase.Web'
    artifactName: 'DH-Helpdesk-ExtendedCase-Web'
