Update dh-helpdesk-extendedcase-web-development.yml for Azure Pipelines

--- a/dh-helpdesk-extendedcase-web-development.yml
+++ b/dh-helpdesk-extendedcase-web-development.yml
@@ -31,12 +31,12 @@ steps:
 - task: CopyFiles@2
   displayName: Copy DH-Helpdesk-ExtendedCase-Web
   inputs:
-    SourceFolder: '$(Build.ArtifactStagingDirectory)/ExtendedCase/ExtendedCase.Web'
+    SourceFolder: '**/ExtendedCase/ExtendedCase.Web'
     Contents: '**'
-    TargetFolder: '$(Build.ArtifactStagingDirectory)/ExtendedCase.Web'
+    TargetFolder: '/ExtendedCase.Web'
   
 - task: PublishPipelineArtifact@1
   displayName: Publish Artifact DH-Helpdesk-ExtendedCase-Web
   inputs:
-   targetPath: '$(Build.ArtifactStagingDirectory)/ExtendedCase.Web'
+   targetPath: '/ExtendedCase.Web'
    artifactName: 'DH-Helpdesk-ExtendedCase-Web'
