--- a/dh-helpdesk-extendedcase-web-development.yml
+++ b/dh-helpdesk-extendedcase-web-development.yml
@@ -31,7 +31,7 @@ steps:
 - task: CopyFiles@2
   displayName: Copy DH-Helpdesk-ExtendedCase-Web
   inputs:
-    SourceFolder: '$(Build.SourcesDirectory)/ExtendedCase/ExtendedCase.Web'
+    SourceFolder: '$(Build.SourcesDirectory)/ExtendedCase/ExtendedCase.Web/src'
     Contents: '**'
     TargetFolder: '$(Build.ArtifactStagingDirectory)/ExtendedCase.Web'
   
