NLog config added

--- a/dhHelpdeskNG/DH.Helpdesk.Upkeeper/App.config
+++ b/dhHelpdeskNG/DH.Helpdesk.Upkeeper/App.config
@@ -11,7 +11,7 @@
     <add key="Customer_Id" value="749"/>
     <add key="CreateInventory" value="true"/>
     <add key="UpdateInventory" value="true"/>
-    <add key="UpdateUpKeeper" value="false"/>
+    <add key="UpdateUpKeeper" value="true"/>
     <add key="UpKeeperOrgNo" value="68"/>
     <add key="ClientSettingsProvider.ServiceUri" value=""/>
   </appSettings>
