--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Web.config.application.copy.template
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Web.config.application.copy.template
@@ -38,10 +38,10 @@
 		<add key="DHProfiler:MeasureLoggingPerformance" value="true" />
 		<add key="LoginMode" value="Application" />
 		<add key="MicrosoftLogin" value="1" />
-		<add key="ClientId" value="#{ClientId}" />
+		<add key="ClientId" value="#{HelpdeskClientId}" />
 		<add key="Tenant" value="common" />
 		<add key="Authority" value="https://login.microsoftonline.com/{0}/v2.0" />
-		<add key="RedirectUri" value="#{RedirectUri}" />
+		<add key="RedirectUri" value="#{HelpdeskRedirectUri}" />
 	</appSettings>
 	<system.web.extensions>
 		<scripting>
