--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Web.config.application.template
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Web.config.application.template
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 	<configSections>
 		<!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
@@ -32,9 +32,6 @@
 		<add key="MicrosoftLogin" value="1" /><!-- 1 = Show Microsoft login-button, else 0-->
 		<add key="ClientId" value="#{HelpdeskClientId}" /><!-- Your applications Client ID fromn Azure-->
 		<add key="Tenant" value="common" />
-		<!--If your application supports My organization only, replace this value with the Tenant Id or Tenant name (for example, contoso.onmicrosoft.com)
-    If your application supports Accounts in any organizational directory, replace this value with "organizations"
-    If your application supports All Microsoft account users, replace this value with "common"-->
 		<add key="Authority" value="https://login.microsoftonline.com/{0}/v2.0" />
 		<add key="RedirectUri" value="#{HelpdeskRedirectUri}" /><!-- Your applications RedirectUri from Azure eg homepage-->
 	</appSettings>
@@ -46,7 +43,7 @@
 		</scripting>
 	</system.web.extensions>
 	<system.web>
-		<compilation debug="true" targetFramework="4.7.2" />
+		<compilation targetFramework="4.7.2" />
 		<customErrors mode="Off"/>
 		<pages>
 			<namespaces>
@@ -59,7 +56,7 @@
 			</namespaces>
 		</pages>
 		<!-- 50 mb in kilobytes --><!-- commit -->
-		<httpRuntime maxRequestLength="52428800" targetFramework="4.7.2"/>
+		<httpRuntime maxRequestLength="52428800" targetFramework="4.7.2" enableVersionHeader="false" />
 		<authentication mode="None">
 			<forms loginUrl="~/Login/Login" defaultUrl="~/" />
 		</authentication>
@@ -171,7 +168,10 @@
 				<assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31bf3856ad364e35" culture="neutral" />
 				<bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
 			</dependentAssembly>
-			<!--New Owin Development-->
+			<dependentAssembly>
+				<assemblyIdentity name="itextsharp" publicKeyToken="8354ae6d2174ddca" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-5.5.0.0" newVersion="5.5.0.0" />
+			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral" />
 				<bindingRedirect oldVersion="0.0.0.0-4.2.0.0" newVersion="4.2.0.0" />
@@ -195,6 +195,14 @@
 			<dependentAssembly>
 				<assemblyIdentity name="Ninject.Web.Common" publicKeyToken="c7192dc5380945e7" culture="neutral" />
 				<bindingRedirect oldVersion="0.0.0.0-3.3.1.0" newVersion="3.3.1.0" />
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="System.Drawing" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-5.0.0.0" newVersion="5.0.0.0" />
 			</dependentAssembly>
 		</assemblyBinding>
 	</runtime>
