--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config
@@ -57,7 +57,7 @@
     </selfServiceUrlSetting>
   </selfServiceConfigurable>
   <connectionStrings>
-    <add name="DSN" connectionString="Password=kgk270;Persist Security Info=True;User ID=web_user;Initial Catalog=dhHelpdesk_IKEA_BSCHR;Data Source=DHUTVSQL2;MultipleActiveResultSets=True" />
+    <!--<add name="DSN" connectionString="Password=kgk270;Persist Security Info=True;User ID=web_user;Initial Catalog=dhHelpdesk_IKEA_BSCHR;Data Source=DHUTVSQL2;MultipleActiveResultSets=True" />-->
     <!--dev-->
     <!--<add name="HelpdeskSqlServerDbContext" connectionString="Data Source=DHDS01\SQLEXPRESS;Initial Catalog=Helpdesk-Dev;User Id=pds;Password=pds;MultipleActiveResultSets=True;Connection Lifetime=3;Max Pool Size=3;" providerName="System.Data.SqlClient" />-->
     <!--dhutvsql6-->
@@ -70,12 +70,12 @@
     <add name="HelpdeskOleDbContext" connectionString="Provider=SQLOLEDB;Data Source=DHUTVSQL2;Initial Catalog=dhHelpdesk_IKEA_BSCHR;User Id=web_user;Password=kgk270;" providerName="System.Data.OleDb" />-->
   </connectionStrings>
   <appSettings>
-    <add key="LoginMode" value="Microsoft" />
+    <add key="LoginMode" value="Windows" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="dh_filesDirectory" value="c:/temp" />
-    <add key="dh_selfserviceaddress" value="http://localhost:64087/case/index/" />
-    <add key="dh_helpdeskaddress" value="http://localhost:64087" />
+    <add key="dh_selfserviceaddress" value="http://localhost:447/case/index/" />
+    <add key="dh_helpdeskaddress" value="https://localhost:447" />
     <add key="webpages:Version" value="3.0.0.0" />
     <!-- For self/service line manager -->
     <add key="InitFromSelfService" value="true" />
