Update dh-helpdesk-web.yml for Azure Pipelines

--- a/dh-helpdesk-web.yml
+++ b/dh-helpdesk-web.yml
@@ -1,6 +1,8 @@
 trigger:
 - Development
 
+name: $(release.versionMajor).$(release.versionMinor).$(release.versionSubMinor).$(rev)
+
 pool:
   vmImage: 'windows-latest'
 
