--- a/dh-helpdesk-web.yml
+++ b/dh-helpdesk-web.yml
@@ -1,7 +1,7 @@
 trigger:
 - Development
 
-name: $(release.versionMajor).$(release.versionMinor).$(release.versionSubMinor).$(rev)
+name: $(release.versionMajor).$(release.versionMinor).$(release.versionSubMinor)
 
 pool:
   vmImage: 'windows-latest'
@@ -10,6 +10,7 @@ variables:
   solution: '**/DH.Helpdesk.sln'
   buildPlatform: 'Any CPU'
   buildConfiguration: 'Release'
+  group: build-variables
 
 steps:
 - task: NuGetToolInstaller@1
