--- a/dh-helpdesk-web.yml
+++ b/dh-helpdesk-web.yml
@@ -14,11 +14,12 @@ variables:
 
 steps:
 - script: |
+    sourceVersion: $(Build.SourceVersion) 
     echo $sourceVersion
     commitHash=${sourceVersion:0:7}
     echo $commitHash
     echo "##vso[task.setvariable variable=commitHash]$commitHash" ## Set variable for using in other tasks.
-  env: { sourceVersion: $(Build.SourceVersion) }
+  # env: { sourceVersion: $(Build.SourceVersion) }
   displayName: Git Hash 7-digit
   workingDirectory: #workingDirectory
 
