--- a/dh-helpdesk-web.yml
+++ b/dh-helpdesk-web.yml
@@ -13,15 +13,24 @@ variables:
   group: build-variables
 
 steps:
-- script: |
-    sourceVersion: $(Build.SourceVersion) 
-    echo $sourceVersion
-    commitHash=${sourceVersion:0:7}
-    echo $commitHash
-    echo "##vso[task.setvariable variable=commitHash]$commitHash" ## Set variable for using in other tasks.
-  # env: { sourceVersion: $(Build.SourceVersion) }
-  displayName: Git Hash 7-digit
-  workingDirectory: #workingDirectory
+- bash: |
+    short_hash=`git rev-parse --short=7 HEAD`  ## At least 7 digits, more if needed for uniqueness
+    echo ""
+    echo "Full git hash:  $(Build.SourceVersion)"
+    echo "Short git hash: $commitHash"
+    echo "##vso[task.setvariable variable=commitHash]$commitHash"  ## Store variable for subsequent steps
+  workingDirectory: $(Build.SourcesDirectory)
+  displayName: Get short git hash
+
+# - script: |
+#     sourceVersion: $(Build.SourceVersion) 
+#     echo $sourceVersion
+#     commitHash=${sourceVersion:0:7}
+#     echo $commitHash
+#     echo "##vso[task.setvariable variable=commitHash]$commitHash" ## Set variable for using in other tasks.
+#   # env: { sourceVersion: $(Build.SourceVersion) }
+#   displayName: Git Hash 7-digit
+#   workingDirectory: #workingDirectory
 
 - task: NuGetToolInstaller@1
 
