Update dh-helpdesk-web.yml for Azure Pipelines

--- a/dh-helpdesk-web.yml
+++ b/dh-helpdesk-web.yml
@@ -1,7 +1,7 @@
 trigger:
 - Development
 
-name: $(release.versionMajor).$(release.versionMinor).$(release.versionSubMinor).$(Rev:r).$(commitHash)
+name: $(release.versionMajor).$(release.versionMinor).$(release.versionSubMinor).$(Rev:r)$(commitHash)
 
 pool:
   vmImage: 'windows-latest'
