--- a/dh-helpdesk-web.yml
+++ b/dh-helpdesk-web.yml
@@ -1,7 +1,7 @@
 trigger:
 - Development
 
-name: $(development.versionMajor).$(development.versionMinor).$(development.versionSubMinor).$(Rev:r)
+name: $(development.versionMajor).$(development.versionMinor).$(development.versionSubMinor).$(Rev:r).$(Build.SourceVersion)?
 
 pool:
   vmImage: 'windows-latest'
