--- a/dh-helpdesk-extendedcase-web-development.yml
+++ b/dh-helpdesk-extendedcase-web-development.yml
@@ -6,6 +6,8 @@
 trigger:
 - Development
 
+name: $(development.versionMajor).$(development.versionMinor).$(development.versionSubMinor).$(Rev:r).$(Build.SourceVersion)
+
 pool:
   vmImage: 'windows-latest'
 
