--- a/helpdesk_mobile_dev.yml
+++ b/helpdesk_mobile_dev.yml
@@ -4,6 +4,8 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/javascript
 trigger:
 - Development
+name: $(development.versionMajor).$(development.versionMinor).$(development.versionSubMinor).$(Rev:r).$(Build.SourceVersion)
+
 pool:
   vmImage: 'windows-latest'
 steps:
