--- a/dh-helpdesk-extendedcase-webcomponents-dev.yml
+++ b/dh-helpdesk-extendedcase-webcomponents-dev.yml
@@ -5,6 +5,7 @@
 
 trigger:
 - Development
+name: $(development.versionMajor).$(development.versionMinor).$(development.versionSubMinor).$(Rev:r).$(Build.SourceVersion)
 pool:
   vmImage: 'windows-latest'
 steps:
