dh-helpdesk-extendedcase-webcomponents-master.yml edited online with Bitbucket

--- a/dh-helpdesk-extendedcase-webcomponents-master.yml
+++ b/dh-helpdesk-extendedcase-webcomponents-master.yml
@@ -5,7 +5,7 @@
 
 trigger:
 - Master
-name: $(release.versionMajor).$(relase.versionMinor).$(release.versionSubMinor).$(Rev:r).$(Build.SourceVersion)
+name: $(release.versionMajor).$(release.versionMinor).$(release.versionSubMinor).$(Rev:r).$(Build.SourceVersion)
 pool:
   vmImage: 'windows-latest'
 steps:
