Update dh-helpdesk-master.yaml for Azure Pipelines

--- a/dh-helpdesk-master.yaml
+++ b/dh-helpdesk-master.yaml
@@ -1,7 +1,7 @@
 trigger:
 - Master
 
-name: $(release.versionMajor).$(release.versionMinor).$(release.versionSubMinor).$(Rev:r).$(Build.SourceVersion)
+name: $(release.versionMajor).$(release.versionMinor).$(release.versionSubMinor).$(Rev:r)
 
 pool:
   vmImage: 'windows-latest'
