Update dh-helpdesk-extendedcase-api-dev.yml for Azure Pipelines

--- a/dh-helpdesk-extendedcase-api-dev.yml
+++ b/dh-helpdesk-extendedcase-api-dev.yml
@@ -6,7 +6,7 @@
 trigger:
 - Development
 
-name: $(development.versionMajor).$(development.versionMinor).$(development.versionSubMinor).$(Rev:r).$(Build.SourceVersion)
+name: $(development.versionMajor).$(development.versionMinor).$(development.versionSubMinor).$(Rev:r)
 
 pool:
   vmImage: 'windows-latest'
