Update dh-helpdesk-master.yaml for Azure Pipelines

--- a/dh-helpdesk-master.yaml
+++ b/dh-helpdesk-master.yaml
@@ -11,6 +11,7 @@ variables:
   buildPlatform: 'Any CPU'
   buildConfiguration: 'Release'
   group: build-variables
+  revision: $(Rev:r)
 
 steps:
 
