--- a/dh-helpdesk-extendedcase-web-master.yml
+++ b/dh-helpdesk-extendedcase-web-master.yml
@@ -6,7 +6,7 @@
 trigger:
 - Master
 
-name: $(release.versionMajor).$(release.versionMinor).$(release.versionSubMinor).$(Rev:r).$(Build.SourceVersion)
+name: $(release.versionMajor).$(release.versionMinor).$(release.versionSubMinor).$(Rev:r)
 
 pool:
   vmImage: 'windows-latest'
