--- a/dh-helpdesk-web.yml
+++ b/dh-helpdesk-web.yml
@@ -11,7 +11,7 @@ variables:
   buildPlatform: 'Any CPU'
   buildConfiguration: 'Release'
   group: build-variables
-  revision: $(Rev:r)
+  revision: '$(Rev:r)'
 
 steps:
 
