--- a/dh-helpdesk-web.yml
+++ b/dh-helpdesk-web.yml
@@ -31,6 +31,7 @@ steps:
     FileEncoding: 'auto'
     WriteBOM: false
     InformationalVersion: '$(Build.BuildNumber)'
+    FileVersionNumber: '$(Build.BuildNumber)'
     LogLevel: 'verbose'
     FailOnWarning: false
     DisableTelemetry: false
