--- a/dh-helpdesk-extendedcase-api-dev.yml
+++ b/dh-helpdesk-extendedcase-api-dev.yml
@@ -23,6 +23,21 @@ steps:
   inputs:
     restoreSolution: '$(solution)'
 
+- task: Assembly-Info-NetFramework@2
+  inputs:
+    Path: '$(Build.SourcesDirectory)'
+    FileNames: |
+      **\CommonAssembly\SharedAssemblyInfo.cs
+      **\CommonAssembly\SharedAssemblyInfo.vb
+    InsertAttributes: false
+    FileEncoding: 'auto'
+    WriteBOM: false
+    InformationalVersion: '$(Build.BuildNumber)'
+    FileVersionNumber: '$(Build.BuildNumber)'
+    LogLevel: 'verbose'
+    FailOnWarning: false
+    DisableTelemetry: false
+
 - task: MSBuild@1
   displayName: Build DH.Helpdesk.ExtendedCase.Api
   inputs:
